force-app/main/default/objects/Apttus_Config2__AgreementPriceRule__c/Apttus_Config2__AgreementPriceRule__c.object-meta.xml
<CustomObject>
    <description>Represents a special pricing rule associated with an agreement or an asset</description>
    <label>Agreement Price Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Price Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>