force-app/main/default/objects/Apttus_Config2__AgreementPriceRule__c/fields/Apttus_Config2__AllowRemoval__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AllowRemoval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the user is allowed to remove the price rule</description>
    <inlineHelpText>Indicates whether the user is allowed to remove the price rule</inlineHelpText>
    <label>Allow Removal</label>
    <type>Checkbox</type>
</CustomField>