force-app/main/default/objects/Apttus_Config2__AgreementPriceRule__c/fields/Apttus_Config2__ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductCategory__c</fullName>
    <description>The product category associated with the price rule</description>
    <inlineHelpText>The product category associated with the price rule</inlineHelpText>
    <label>Product Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>